[Add]: Convert websocket.js to ES6 version; Add Js-Base64 dependence

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "im-core",
   "version": "0.0.1",
-  "dependencies": {
-    
+  "dependencies": {},
+  "devDependencies": {
+    "js-base64": "^2.4.8"
   }
 }
