--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "im-core",
   "version": "0.0.1",
   "dependencies": {
-    
-  }
+    "js-base64": "^2.4.8"
+  },
+  "devDependencies": {}
 }
